--- a/src/sass/layouts/_old-ui.scss
+++ b/src/sass/layouts/_old-ui.scss
@@ -54,12 +54,7 @@ main:has(button[aria-label='Stop generating']) {
 
 		/* User chat bubble - Edit state. There is no [data-message-author-role="user"] when we clicked on "Edit Prompt", so we need select like this for that case scenario */
 		[class^='group/conversation-turn']:has(textarea) {
-			// .group {
-
 			/* === User/ChatGPT name === */
-			.font-semibold.select-none {
-				color: var(--c-msg-name-user);
-			}
 			.font-semibold.select-none + div .max-w-full {
 				background-color: var(--c-bg-chats-container) !important;
 				box-shadow: var(--box-shadow-textarea);
